--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
 						<h3>Unleash TECH</h3>
 						<h1>Jatin Sharma</h1>
-						<h2 class="rotate">UX/UI DESIGNER , WEB DEVELOPER , APP DEVELOPER , PROGRAMMER</h2>
+						<h2 class="rotate">PROGRAMMER , UX/UI DESIGNER , Business Analytics , WEB DEVELOPER , APP DEVELOPER </h2>
 						<p>I am a passionate computer science student with a strong inclination towards exploring and utilizing new technologies. I thrive on solving problems by leveraging technology and enjoy working collaboratively within a team. My ability to quickly grasp new technologies enables me to stay up-to-date with the latest advancements. I am driven by the desire to tackle modern challenges and provide innovative solutions through the effective application of technology.</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					</div>
@@ -51,7 +51,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 wow bounce">
-						<h2>WHAT I DO</h2>
+						<h2>WHAT I DO ?</h2>
 					</div>
                 </div>  
                 
@@ -59,11 +59,11 @@
 					<div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
 						<div class="media">
 							<div class="media-object media-left">
-								<i class="fa fa-paint-brush"></i>
+								<i class="fa fa-code"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">UX &AMP; UI Design</h3>
-								<p>I create intuitive and visually appealing experiences by combining user-centered design principles and artistic elements.</p>
+								<h3 class="media-heading">Programming</h3>
+								<p>I write and develop efficient code to create software applications and solve problems using various programming languages and frameworks.</p>
 							</div>
 						</div>
 					</div>
@@ -95,15 +95,14 @@
 					<div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
 						<div class="media">
 							<div class="media-object media-left">
-								<i class="fa fa-code"></i>
+								<i class="fa fa-paint-brush"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Programming</h3>
-								<p>I write and develop efficient code to create software applications and solve problems using various programming languages and frameworks.</p>
+								<h3 class="media-heading">UX &AMP; UI Design</h3>
+								<p>I create intuitive and visually appealing experiences by combining user-centered design principles and artistic elements.</p>
 							</div>
 						</div>
 					</div>
-                    
 				</div>
 			</div>
 		</div>
@@ -120,17 +119,17 @@
 						<p> I thrive in team environments and possess a fast learning ability for adopting new technologies. My passion lies in addressing modern challenges with innovative tech solutions.</p>
 					</div>
 					<div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s">
-						<span class="text-top">Designing <small>75%</small></span>
+						<span class="text-top">Designing <small>85%</small></span>
 							<div class="progress">
-								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
+								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
 							</div>
 						<span>Mobile Apps <small>80%</small></span>
 							<div class="progress">
 								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
 							</div>
-						<span>Websites <small>70%</small></span>
+						<span>Websites <small>90%</small></span>
 							<div class="progress">
-								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
 							</div>
 						<span>Programming <small>80%</small></span>
 							<div class="progress">
