--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
 						<h3>Unleash TECH</h3>
 						<h1>Jatin Sharma</h1>
-						<h2 class="rotate">PROGRAMMER , UX/UI DESIGNER , Business Analytics , WEB DEVELOPER , APP DEVELOPER </h2>
+						<h2 class="rotate">PROGRAMMER , UX/UI DESIGNER , WEB DEVELOPER , APP DEVELOPER </h2>
 						<p>I am a passionate computer science student with a strong inclination towards exploring and utilizing new technologies. I thrive on solving problems by leveraging technology and enjoy working collaboratively within a team. My ability to quickly grasp new technologies enables me to stay up-to-date with the latest advancements. I am driven by the desire to tackle modern challenges and provide innovative solutions through the effective application of technology.</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					</div>
