--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
 						<h3>Let's MAKE it WORK</h3>
 						<h1>Jatin Sharma</h1>
-						<h2 class="rotate">PROGRAMMER , BUSINESS ANALYST , UX/UI DESIGNER , DATA ANALYST , WEB DEVELOPER , APP DEVELOPER  </h2>
-						<p>I am a passionate computer science student with a strong inclination towards exploring and utilizing new technologies. I thrive on solving problems by leveraging technology and enjoy working collaboratively within a team. My ability to quickly grasp new technologies enables me to stay up-to-date with the latest advancements. I am driven by the desire to tackle modern challenges and provide innovative solutions through the effective application of technology.</p>
+						<h2 class="rotate">PRODUCT MANAGER ,  UX THINKER , BUSINESS ANALYST , STRATEGIC BUILDER , MARKET-FOCUSED THINKER , DATA-DRIVEN DECIDER , TEAM COLLABORATOR , BRAND STRATEGIST , BUSINESS SOLVER , BRAND STORY CREATOR  </h2>
+						<p>I’m a product-minded technologist with a strong foundation in computer science, currently expanding my focus into product management and business development. I thrive at the intersection of technology, design, and market strategy, creating solutions that not only work—but solve real problems.<br>With hands-on experience building apps, websites, and APIs, I’ve also led client interactions, performed market research, and helped position digital products for success. I enjoy driving collaboration between engineering, design, and business teams to deliver high-impact outcomes.</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					</div>
 					<div class="col-md-2"></div>
@@ -62,8 +62,8 @@
 								<i class="fa fa-code"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Programming</h3>
-								<p>I write and develop efficient code to create software applications and solve problems using various programming languages and frameworks.</p>
+								<h3 class="media-heading">Product Strategy & Roadmapping</h3>
+								<p>Define user-centric product roadmaps, prioritize features, and validate MVPs based on customer needs and market research.</p>
 							</div>
 						</div>
 					</div>
@@ -73,8 +73,8 @@
 								<i class="fa fa-mobile-phone"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Develop Mobile App</h3>
-								<p>I design and build engaging and functional mobile applications, focusing on user experience and cutting-edge technology.</p>
+								<h3 class="media-heading">Market & User Research</h3>
+								<p>Conduct research, competitor analysis, and user interviews to align product features with real-world needs.</p>
 							</div>
 						</div>
 					</div>
@@ -85,8 +85,8 @@
 								<i class="fa fa-paper-plane"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Develop Web Solution</h3>
-								<p>I design and build effective and dynamic websites using modern technologies to meet client's unique requirements.</p>
+								<h3 class="media-heading">Business Development & Client Management</h3>
+								<p>Identify B2B opportunities, lead generation, client outreach, and retention strategies using tools like LinkedIn, CRM systems, and cold email outreach.</p>
 							</div>
 						</div>
 					</div>
@@ -98,8 +98,8 @@
 								<i class="fa fa-paint-brush"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">UX &AMP; UI Design</h3>
-								<p>I create intuitive and visually appealing experiences by combining user-centered design principles and artistic elements.</p>
+								<h3 class="media-heading">UX/UI & Design Thinking</h3>
+								<p>Leverage design tools to wireframe, prototype, and test user flows that boost user satisfaction and retention.</p>
 							</div>
 						</div>
 					</div>
@@ -109,8 +109,8 @@
 								<i class="fa fa-diamond"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Graphic Designer </h3>
-								<p>I craft visually captivating and user-friendly designs by seamlessly integrating user-centered design principles with artistic creativity.</p>
+								<h3 class="media-heading">Data Analysis & Decision Making </h3>
+								<p>Use data to track KPIs, analyze funnels, and inform product direction. Experience with Excel, SQL, Google Analytics, and more.</p>
 							</div>
 						</div>
 					</div>
@@ -120,8 +120,8 @@
 								<i class="fa fa-line-chart"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Data &AMP; Business Analyst</h3>
-								<p>I develop insightful and impactful analyses by merging data-driven methodologies with a deep understanding of business strategies and goals.</p>
+								<h3 class="media-heading">Technical Collaboration</h3>
+								<p>Collaborate with dev teams for product execution. Skilled in Figma, Flutter, REST APIs, Firebase, GitHub, and Agile tools like Notion & Jira.</p>
 							</div>
 						</div>
 					</div>
@@ -168,7 +168,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2 class="wow bounce">PROJECTS</h2>
+					<h2 class="wow bounce">SOME CASE STUDY</h2>
 				</div>
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
